// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Group create component 1`] = `
<RadioGroup
  disableAll={false}
  mode="group"
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "选项1",
        "value": 1,
      },
      Object {
        "label": "选项2",
        "value": 2,
      },
      Object {
        "label": "选项3",
        "value": 3,
      },
    ]
  }
>
  <div
    className="el-checkbox-group"
  >
    <div
      className="el-checkbox-row"
    >
      <Radio
        checked={false}
        className=""
        disabled={false}
        key="0"
        label="选项1"
        onChange={[Function]}
        value={1}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox el-radio"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
              value={1}
            />
            <span />
          </span>
          <span>
            选项1
          </span>
        </label>
      </Radio>
      <Radio
        checked={false}
        className=""
        disabled={false}
        key="1"
        label="选项2"
        onChange={[Function]}
        value={2}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox el-radio"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
              value={2}
            />
            <span />
          </span>
          <span>
            选项2
          </span>
        </label>
      </Radio>
      <Radio
        checked={false}
        className=""
        disabled={false}
        key="2"
        label="选项3"
        onChange={[Function]}
        value={3}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox el-radio"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
              value={3}
            />
            <span />
          </span>
          <span>
            选项3
          </span>
        </label>
      </Radio>
    </div>
  </div>
</RadioGroup>
`;

exports[`Radio Group define disableAll 1`] = `
<RadioGroup
  disableAll={true}
  mode="group"
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "选项1",
        "value": 1,
      },
      Object {
        "label": "选项2",
        "value": 2,
      },
      Object {
        "label": "选项3",
        "value": 3,
      },
    ]
  }
>
  <div
    className="el-checkbox-group"
  >
    <div
      className="el-checkbox-row"
    >
      <Radio
        checked={false}
        className=""
        disabled={true}
        key="0"
        label="选项1"
        onChange={[Function]}
        value={1}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox el-radio"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={true}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
              value={1}
            />
            <span />
          </span>
          <span>
            选项1
          </span>
        </label>
      </Radio>
      <Radio
        checked={false}
        className=""
        disabled={true}
        key="1"
        label="选项2"
        onChange={[Function]}
        value={2}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox el-radio"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={true}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
              value={2}
            />
            <span />
          </span>
          <span>
            选项2
          </span>
        </label>
      </Radio>
      <Radio
        checked={false}
        className=""
        disabled={true}
        key="2"
        label="选项3"
        onChange={[Function]}
        value={3}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox el-radio"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={true}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
              value={3}
            />
            <span />
          </span>
          <span>
            选项3
          </span>
        </label>
      </Radio>
    </div>
  </div>
</RadioGroup>
`;

exports[`Radio Group define options str 1`] = `
<RadioGroup
  disableAll={true}
  mode="group"
  onChange={[Function]}
  options={
    Array [
      1,
      2,
      3,
    ]
  }
>
  <div
    className="el-checkbox-group"
  >
    <div
      className="el-checkbox-row"
    >
      <Radio
        checked={false}
        className=""
        disabled={true}
        key="0"
        label={1}
        name={1}
        onChange={[Function]}
        value={1}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox el-radio"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={true}
              name={1}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
              value={1}
            />
            <span />
          </span>
          <span>
            1
          </span>
        </label>
      </Radio>
      <Radio
        checked={false}
        className=""
        disabled={true}
        key="1"
        label={2}
        name={2}
        onChange={[Function]}
        value={2}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox el-radio"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={true}
              name={2}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
              value={2}
            />
            <span />
          </span>
          <span>
            2
          </span>
        </label>
      </Radio>
      <Radio
        checked={false}
        className=""
        disabled={true}
        key="2"
        label={3}
        name={3}
        onChange={[Function]}
        value={3}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox el-radio"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={true}
              name={3}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
              value={3}
            />
            <span />
          </span>
          <span>
            3
          </span>
        </label>
      </Radio>
    </div>
  </div>
</RadioGroup>
`;

exports[`Radio create component 1`] = `
<Radio
  onChange={[Function]}
>
  <label
    className="el-checkbox-wrapper"
  >
    <span
      className="el-checkbox el-radio"
    >
      <input
        className="el-checkbox-input"
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
      <span />
    </span>
    <span />
  </label>
</Radio>
`;

exports[`Radio define checked 1`] = `
<Radio
  checked={true}
  onChange={[Function]}
>
  <label
    className="el-checkbox-wrapper"
  >
    <span
      className="el-checkbox el-radio"
    >
      <input
        checked={true}
        className="el-checkbox-input"
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
      <span />
    </span>
    <span />
  </label>
</Radio>
`;

exports[`Radio define disabled 1`] = `
<Radio
  disabled={true}
  onChange={[Function]}
>
  <label
    className="el-checkbox-wrapper el-disabled"
  >
    <span
      className="el-checkbox el-radio"
    >
      <input
        className="el-checkbox-input"
        disabled={true}
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
      <span />
    </span>
    <span />
  </label>
</Radio>
`;

exports[`Radio define readOnly 1`] = `
<Radio
  onChange={[Function]}
  readOnly={true}
>
  <label
    className="el-checkbox-wrapper"
  >
    <span
      className="el-checkbox el-radio"
    >
      <input
        className="el-checkbox-input"
        onChange={[Function]}
        onClick={[Function]}
        readOnly={true}
        type="radio"
      />
      <span />
    </span>
    <span />
  </label>
</Radio>
`;

exports[`Radio define switch 1`] = `
<Radio
  onChange={[Function]}
  type="switch"
>
  <label
    className="el-checkbox-wrapper"
  >
    <span
      className="el-checkbox el-switch"
    >
      <input
        className="el-checkbox-input"
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
      <span />
    </span>
    <span />
  </label>
</Radio>
`;
